# C-C-Secured-Chat-Client

./: CMakeLists.txt  README.md  aes.key  cert.pem  ciphers.cpp  ciphers.h  connector.cpp  connector.h  encryptors.cpp  encryptors.h  iv.key  key.pem  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ssl_connector.cpp  ssl_connector.h
